second pard of fixes

--- a/about.html
+++ b/about.html
@@ -100,18 +100,19 @@
                             <div class="two-grid-text wt-textblock" data-aos="fade-left" data-aos-delay="100"
                                 data-aos-duration="1400">
                                 <h4>10+</h4>
-                                <p>реализованных проектов. Мы против шаблонов, каждое решение по&#8209;своему уникально</p>
+                                <p>реализованных проектов. Мы против шаблонов, каждое решение по&#8209;своему уникально
+                                </p>
                             </div>
                             <div class="tags-block">
-                                <a href="#" class="tag-item" data-aos="fade-in" data-aos-delay="300"
-                                    data-aos-duration="600" data-aos-offset="-200">Продвижение</a>
-                                <a href="#" class="tag-item" data-aos="fade-in" data-aos-delay="350"
+                                <a href="part6.html" class="tag-item" data-aos="fade-in" data-aos-delay="300"
+                                    data-aos-duration="600" data-aos-offset="-200">Design</a>
+                                <a href="part1.html" class="tag-item" data-aos="fade-in" data-aos-delay="350"
                                     data-aos-duration="600" data-aos-offset="-200">Сайты</a>
-                                <a href="#" class="tag-item" data-aos="fade-in" data-aos-delay="400"
+                                <a href="part4.html" class="tag-item" data-aos="fade-in" data-aos-delay="400"
                                     data-aos-duration="600" data-aos-offset="-200">Machine Learning </a>
-                                <a href="#" class="tag-item transp" data-aos="fade-in" data-aos-delay="450"
+                                <a href="part2.html" class="tag-item transp" data-aos="fade-in" data-aos-delay="450"
                                     data-aos-duration="600" data-aos-offset="-200">Боты</a>
-                                <a href="#" class="tag-item transp" data-aos="fade-in" data-aos-delay="500"
+                                <a href="part3.html" class="tag-item transp" data-aos="fade-in" data-aos-delay="500"
                                     data-aos-duration="600" data-aos-offset="-200">Приложения</a>
                             </div>
                         </div>
@@ -184,10 +185,10 @@
                     <div id="wrt3" class="wrt-non">
                         <p>4 октября 1957 года с рёвом двигателей ракеты Р-7 человечество вступило в космическую эру:
                             советскими учёными был запущен первый в мире искусственный спутник Земли. После этого
-                            великого события в английском языке даже появилось устойчивое выражение «Sputnik moment»,
+                            великого события в английском языке даже появилось устойчивое выражение "Sputnik moment",
                             обозначающее момент, когда общество осознаёт необходимость нового технологического прорыва.
                             В 2011 году Барак Обама, призывая к увеличению количества проводимых исследований, скажет в
-                            обращении к нации: «This is our generation's <b>Sputnik moment</b>».</p>
+                            обращении к нации: "This is our generation's <b>Sputnik moment</b>".</p>
                         <p>Мы, основатели Sputnik Solutions, вдохновлялись космосом и людьми, которые сделали космос
                             ближе. Будучи молодыми студентами топовых технических ВУЗов России, мы поняли, что на рынке
                             веб-студий необходим свой прорыв: индустрия превратилась в конвейер однотипных, устаревших
@@ -336,7 +337,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card-next" data-aos="fade-right" data-aos-delay="600" data-aos-duration="1000">
+                <div class="card-next" data-aos="fade-right" data-aos-delay="0" data-aos-duration="1000">
                     <div class="next-text">
                         <div class="tit wrt-non" id="wrt24">И ЕЩЁ</div>
                         <div class="txt wrt-non" id="wrt25">более 20 сотрудников</div>
@@ -369,7 +370,11 @@
                         <div class="info">info@sputnik.software</div>
                     </div>
                     <div class="info-item item-round">
-                        <img class="rounds" src="img/rounds.svg" alt="">
+                        <div class="socials">
+                            <img src="img/telegram-icon.svg" alt="">
+                            <img src="img/vk-icon.svg" alt="">
+                            <img src="img/youtube-icon.svg" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
