--- a/art-print.html
+++ b/art-print.html
@@ -95,11 +95,17 @@
 
             <div class="eff-text">
                 <div class="content">
-                    <div class="text-center wrt-non" id="wrt1">Может быть, Вы не знали &laquo;Арт-Принт&raquo;, но
-                        &laquo;Арт-Принт&raquo; точно знает Вас: эта типография работает на рынке производства этикеток
-                        с 2001 года, их продукция используется на технике и электронике Haier, LG, BEKO, мебели IKEA. У
-                        &laquo;Арт-Принт&raquo; уже была сформированная айдентика, но не было современного сайта.
-                        Компания обратилась к Sputnik Solutions, чтобы создать его.</div>
+                    <div class="text-center wrt-non" id="wrt1">
+                        <p>
+                            Может быть, Вы не знали &laquo;Арт-Принт&raquo;, но
+                            &laquo;Арт-Принт&raquo; точно знает Вас: эта типография работает на рынке производства
+                            этикеток
+                            с 2001 года, их продукция используется на технике и электронике Haier, LG, BEKO, мебели
+                            IKEA. У
+                            &laquo;Арт-Принт&raquo; уже была сформированная айдентика, но не было современного сайта.
+                            Компания обратилась к Sputnik Solutions, чтобы создать его.
+                        </p>
+                    </div>
                     <div class="line-gradi" data-aos="fade-down" data-aos-delay="20" data-aos-duration="1200"></div>
                 </div>
 
@@ -212,11 +218,11 @@
                 <div class="mobi-container">
                     <div class="mobi-wrapper">
                         <div class="img-top img-mobi">
-                            <img src="img/mob-img3.png" alt="" data-aos="fade-right" data-aos-delay="150"
+                            <img src="img/mob-img5.svg" alt="" data-aos="fade-right" data-aos-delay="150"
                                 data-aos-duration="1200">
                         </div>
                         <div class="img-bottom img-mobi">
-                            <img src="img/mob-img4.png" alt="" data-aos="fade-left" data-aos-delay="150"
+                            <img src="img/mob-img6.svg" alt="" data-aos="fade-left" data-aos-delay="150"
                                 data-aos-duration="1200">
                         </div>
                     </div>
@@ -427,8 +433,9 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="logo-mob" data-aos="fade-right" data-aos-delay="150" data-aos-duration="1600"><img
-                            src="img/logo-first.png" alt=""></div>
+                    <div class="logo-mob" data-aos="fade-right" data-aos-delay="150" data-aos-duration="1600">
+                        <img src="img/logo-first.png" alt="">
+                    </div>
                     <div class="instruments" data-aos="fade-right" data-aos-delay="300" data-aos-duration="600">
                         <h4>Инструменты разработки</h4>
                         <p>JavaScript, React, Css</p>
@@ -437,7 +444,7 @@
             </div>
 
             <div class="footer-next">
-                <a href="work-helper.html" class="next-title">Помощник губернатора</a>
+                <a href="work-helper.html" class="next-title">Следующая работа</a>
                 <a href="work-helper.html" class="work-wave"></a>
             </div>
         </div>
