--- a/en/shanti.html
+++ b/en/shanti.html
@@ -95,10 +95,16 @@
 
             <div class="eff-text">
                 <div class="content">
-                    <div class="text-center wrt-non" id="wrt1">Старинная немецкая пословица говорит: “Если у Вашей книги
-                        нет указателя — это не книга”. “Если у Вашей компании нет сайта — это не компания”, — говорим
-                        мы. Компания “Shanti”, занимающаяся химической промышленностью, обратилась к Sputnik Solutions
-                        для создания сайта и презентации.</div>
+                    <div class="text-center wrt-non" id="wrt1">
+                        <p>
+                            Старинная немецкая пословица говорит: “Если у Вашей книги
+                            нет указателя — это не книга”. “Если у Вашей компании нет сайта — это не компания”, —
+                            говорим
+                            мы. Компания “Shanti”, занимающаяся химической промышленностью, обратилась к Sputnik
+                            Solutions
+                            для создания сайта и <a href='present-shanti.pdf'>презентации</a>.
+                        </p>
+                    </div>
                     <div class="line-gradi" data-aos="fade-down" data-aos-delay="20" data-aos-duration="1200"></div>
                 </div>
 
@@ -114,10 +120,12 @@
                         data-aos-duration="1600">
                     <div class="present-text" data-aos="fade-in" data-aos-delay="0" data-aos-duration="400">
                         <p class="wrt-non wrt">Первая задача, с которой мы столкнулись, — это выбор цветов для сайта и
-                            презентации. Команда Sputnik Solutions проанализировала идентичность, историю и преимущества
+                            <a href='present-shanti.pdf'>презентации</a>. Команда Sputnik Solutions проанализировала
+                            идентичность, историю и преимущества
                             компании. Оказалось, что “Shanti” с санскрита означает “спокойствие”, “гармония”, “свобода”.
                             Слово “свобода” символично, ведь производственные возможности Shanti позволяют реализовывать
-                            собственные уникальные разработки.</p>
+                            собственные уникальные разработки.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -298,7 +306,8 @@
                                         мы постарались отразить главные преимущества Shanti, притом сделать это ёмко,
                                         красиво, в айдентике компании. Кстати, среди широкого спектра услуг Shanti есть
                                         одна особенная — поставки сырья для производства красок. Можно сказать, что
-                                        получившаяся презентация рассказывает о компании в красках.</p>
+                                        получившаяся <a href='present-shanti.pdf'>презентация</a> рассказывает о
+                                        компании в красках.</p>
                                 </div>
                                 <div class="author-sign pb15-desk"><b>— улыбается Василий Писляков</b><i>,
                                     </i><span>co-founder Sputnik Solutions</span></div>
@@ -325,7 +334,7 @@
 
             <div class="footer-next">
                 <a href="art-print.html" class="next-title" data-aos="fade-up" data-aos-delay="20"
-                    data-aos-duration="1200">Арт-Принт</a>
+                    data-aos-duration="1200">Следующая работа</a>
                 <a href="art-print.html" class="work-wave"></a>
             </div>
         </div>
