--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
                                     <div class="prop-text" id="wrt4">Поддержка на протяжении всего полета</div>
                                 </div>
 
+                                <div class="swiper-mob">
+                                    <div class="top"><img src="img/swiper-mob1.svg" alt=""></div>
+                                    <div class="bottom"><img src="img/swiper-mob1.svg" alt=""></div>
+                                </div>
                                 <div class="swiper-container">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide prop-card">
@@ -302,7 +306,7 @@
                                     <div class="direct-card pink-card">
                                         <div class="toper-card">
                                             <h4 class="tit-min">Дизайн и брендинг</h4>
-                                            <a href="part5.html" class="round-white"></a>
+                                            <a href="part6.html" class="round-white"></a>
                                         </div>
                                         <div class="desc-card">
                                             <p>Встречают по одёжке — у вас она будет лучшей. Дизайн и айдентика от
@@ -443,8 +447,7 @@
                             <li>Кастомная логика под конкретный заказ (крупные клиенты)</li>
                             <li>Разработка решений из сферы Data Science и Machine Learning (крупные клиенты)</li>
                         </ul>
-                        <img src="img/card-img5.png" alt="" class="card-img" data-aos="zoom-in" data-aos-delay="700"
-                            data-aos-duration="1000">
+
                     </div>
 
                     <div class="can-item card-six" data-aos="zoom-in" data-aos-delay="500" data-aos-duration="1000">
@@ -458,6 +461,8 @@
                             <li>Интернет-магазины</li>
                             <li>Разработка сложных веб-приложений с отдельным ТЗ, разработанным полностью под ключ</li>
                         </ul>
+                        <img src="img/card-img5.png" alt="" class="card-img card-img5" data-aos="zoom-in"
+                            data-aos-delay="700" data-aos-duration="1000">
                         <img src="img/card-img6.png" alt="" class="card-img" data-aos="zoom-in" data-aos-delay="800"
                             data-aos-duration="1000">
                     </div>
@@ -535,7 +540,7 @@
                                 </div>
                                 <div class="case-text" data-aos="fade-right" data-aos-delay="150"
                                     data-aos-duration="1000" data-aos-offset="-350">
-                                    <p id="" class="wrt-non wrt13">«Shanti» с санскрита — «спокойствие», «гармония».
+                                    <p id="" class="wrt-non wrt13">"Shanti" с санскрита — «спокойствие», «гармония».
                                         Благодаря гармоничному сайту клиенты компании чувствуют себя спокойно и
                                         уверенно. Клиентов на сайте, кстати, теперь много благодаря презентации от
                                         Sputnik Solutions</p>
@@ -551,7 +556,7 @@
                         <div class="swiper-slide">
                             <div class="case-slide">
                                 <div class="case-img-desk" data-aos="fade-up" data-aos-delay="0"
-                                    data-aos-duration="1000" data-aos-offset="-3500">
+                                    data-aos-duration="1000" data-aos-offset="-350">
                                     <img src="img/case3-desk.png" alt="">
                                     <a href="art-print.html" class="round-pink"></a>
                                     <div class="case-link" data-aos="fade-in" data-aos-delay="200"
@@ -613,7 +618,8 @@
                         <div class="swiper-slide">
                             <div class="cases-cards">
                                 <a href="work-helper.html" class="case-card"
-                                    style="background-image:url(img/case1-mob.png)" data-aos="fade-left">
+                                    style="background-image:url(img/case1-mob.png);background-size: 102%;"
+                                    data-aos="fade-left">
                                     <div class="case-number">01</div>
                                     <div class="case-text">
                                         <h4>Помощник губернатора</h4>
@@ -623,7 +629,8 @@
                                             именно &laquo;делаем лучше&raquo;, прямо сейчас</p>
                                     </div>
                                 </a>
-                                <a href="shanti.html" class="case-card" style="background-image:url(img/case2-mob.png)"
+                                <a href="shanti.html" class="case-card"
+                                    style="background-image:url(img/case2-mob.png);background-size: 102%;"
                                     data-aos="fade-left">
                                     <div class="case-number">02</div>
                                     <div class="case-text">
@@ -635,7 +642,8 @@
                                     </div>
                                 </a>
                                 <a href="art-print.html" class="case-card"
-                                    style="background-image:url(img/case3-mob.png)" data-aos="fade-left">
+                                    style="background-image:url(img/case3-mob.png);background-size: 110%;"
+                                    data-aos="fade-left">
                                     <div class="case-number">03</div>
                                     <div class="case-text">
                                         <h4>Арт-Принт</h4>
@@ -705,8 +713,12 @@
                             <div class="tit-info">Email</div>
                             <div class="info">info@sputnik.software</div>
                         </div>
-                        <div class="info-item">
-                            <img class="rounds" src="img/rounds.svg" alt="">
+                        <div class="info-item item-round">
+                            <div class="socials" id="socials">
+                                <img src="img/telegram-icon.svg" alt="">
+                                <img src="img/vk-icon.svg" alt="">
+                                <img src="img/youtube-icon.svg" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
