--- a/work-helper.html
+++ b/work-helper.html
@@ -98,11 +98,15 @@
 
             <div class="eff-text">
                 <div class="content">
-                    <div class="text-center wrt-non" id="wrt1">Что делать, если в Вашем дворе не убрали снег? Горячей
-                        линии нет, а обращения<br>на портале &laquo;Добродел&raquo; и &laquoГосуслуги.Решаем
-                        вместе&raquo; могут обрабатываться месяц. Основатели Всероссийского общества изобретателей и
-                        рационализаторов обратились в Sputnik Solutions, чтобы создать современное решение этой
-                        проблемы.</div>
+                    <div class="text-center wrt-non" id="wrt1">
+                        <p>
+                            Что делать, если в Вашем дворе не убрали снег? Горячей
+                            линии нет, а обращения<br>на портале &laquo;Добродел&raquo; и &laquoГосуслуги.Решаем
+                            вместе&raquo; могут обрабатываться месяц. Основатели Всероссийского общества изобретателей и
+                            рационализаторов обратились в Sputnik Solutions, чтобы создать современное решение этой
+                            проблемы.
+                        </p>
+                    </div>
                     <div class="line-gradi only-mob" data-aos="fade-down" data-aos-delay="20" data-aos-duration="1200">
                     </div>
                 </div>
@@ -132,11 +136,11 @@
                 <div class="mobi-container">
                     <div class="mobi-wrapper">
                         <div class="img-top img-mobi">
-                            <img src="img/mob-img1.png" alt="" data-aos="fade-right" data-aos-delay="150"
+                            <img src="img/mob-img5.svg" alt="" data-aos="fade-right" data-aos-delay="150"
                                 data-aos-duration="1200">
                         </div>
                         <div class="img-bottom img-mobi">
-                            <img src="img/mob-img2.png" alt="" data-aos="fade-left" data-aos-delay="150"
+                            <img src="img/mob-img6.svg" alt="" data-aos="fade-left" data-aos-delay="150"
                                 data-aos-duration="1200">
                         </div>
                     </div>
@@ -145,7 +149,8 @@
                 </div>
                 <div class="mobi-text" data-aos="fade-right" data-aos-delay="250" data-aos-duration="1200"
                     data-aos-offset="200"><span class="wrt-non" id="wrt4">Теперь для решения проблемы Вашего города
-                        достаточно позвонить Помощнику на номер 8 (800) 101-24-09. Он распознает и классифицирует
+                        достаточно позвонить Помощнику на номер <a href="tel:88001012409">8 (800) 101-24-09</a>. Он
+                        распознает и классифицирует
                         запрос, если надо — попросит дополнить его. Обработка запроса происходит при помощи
                         искусственного интеллекта, интегрированного в систему.</span></div>
                 <div class="left-gradi" data-aos="fade-right" data-aos-delay="20" data-aos-duration="1200"></div>
@@ -246,7 +251,7 @@
 
             <div class="footer-next">
                 <a href="shanti.html" class="next-title" data-aos="fade-up" data-aos-delay="20"
-                    data-aos-duration="1200">Shanti</a>
+                    data-aos-duration="1200">Следующая <span>работа</span></a>
                 <a href="shanti.html" class="work-wave"></a>
             </div>
         </div>
