--- a/en/contacts.html
+++ b/en/contacts.html
@@ -89,7 +89,7 @@
 
         <div class="center-form" id="form">
             <div class="datas-flex">
-                <h4>Напишите нам!</h4>
+                <h4>Напи<span>ш</span>ите нам!</h4>
                 <form action='/' method='post' class="form-block form-f">
                     <div class="one-field" data-aos="zoom-in" data-aos-delay="0" data-aos-duration="1000">
                         <input type="text" name="name" placeholder="Имя Фамилия" required="true">
@@ -137,8 +137,11 @@
                         <div class="info">info@sputnik.software</div>
                     </div>
                 </div>
-                <img class="rounds-desk" src="../img/rounds-desk.svg" alt="">
-                <img class="rounds-mob" src="../img/rounds-mob.svg" alt="">
+                <div class="rounds-desk">
+                    <img src="img/telegram-colorful-icon.svg" alt="">
+                    <img src="img/vk-colorful-icon.svg" alt="">
+                    <img src="img/youtube-colorful-icon.svg" alt="">
+                </div>
             </div>
         </div>
 
@@ -164,7 +167,11 @@
                         <div class="info">info@sputnik.software</div>
                     </div>
                     <div class="info-item item-round">
-                        <img class="rounds" src="../img/rounds-soc.svg" alt="">
+                        <div class="socials">
+                            <img src="img/telegram-icon.svg" alt="">
+                            <img src="img/vk-icon.svg" alt="">
+                            <img src="img/youtube-icon.svg" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
