--- a/en/work-helper.html
+++ b/en/work-helper.html
@@ -97,10 +97,16 @@
 
             <div class="eff-text">
                 <div class="content">
-                    <div class="text-center wrt-non" id="wrt1">Что делать, если в Вашем дворе не убрали снег? Горячей
-                        линии нет, а обращения<br>на портале "Добродел" и "Госуслуги.Решаем вместе" могут обрабатываться
-                        месяц. Основатели Всероссийского общества изобретателей и рационализаторов обратились в Sputnik
-                        Solutions, чтобы создать современное решение этой проблемы.</div>
+                    <div class="text-center wrt-non" id="wrt1">
+                        <p>
+                            Что делать, если в Вашем дворе не убрали снег? Горячей
+                            линии нет, а обращения<br>на портале "Добродел" и "Госуслуги.Решаем вместе" могут
+                            обрабатываться
+                            месяц. Основатели Всероссийского общества изобретателей и рационализаторов обратились в
+                            Sputnik
+                            Solutions, чтобы создать современное решение этой проблемы.
+                        </p>
+                    </div>
                     <div class="line-gradi only-mob" data-aos="fade-down" data-aos-delay="20" data-aos-duration="1200">
                     </div>
                 </div>
@@ -130,11 +136,11 @@
                 <div class="mobi-container">
                     <div class="mobi-wrapper">
                         <div class="img-top img-mobi">
-                            <img src="../img/mob-img1.png" alt="" data-aos="fade-right" data-aos-delay="150"
+                            <img src="../img/mob-img5.svg" alt="" data-aos="fade-right" data-aos-delay="150"
                                 data-aos-duration="1200">
                         </div>
                         <div class="img-bottom img-mobi">
-                            <img src="../img/mob-img2.png" alt="" data-aos="fade-left" data-aos-delay="150"
+                            <img src="../img/mob-img6.svg" alt="" data-aos="fade-left" data-aos-delay="150"
                                 data-aos-duration="1200">
                         </div>
                     </div>
@@ -244,7 +250,7 @@
 
             <div class="footer-next">
                 <a href="shanti.html" class="next-title" data-aos="fade-up" data-aos-delay="20"
-                    data-aos-duration="1200">Shanti</a>
+                    data-aos-duration="1200">Следующая работа</a>
                 <a href="shanti.html" class="work-wave"></a>
             </div>
         </div>
